--- a/package.json
+++ b/package.json
@@ -57,10 +57,9 @@
     "gulp": "^3",
     "gulp-babel": "^6.1.1",
     "gulp-coffee": "^2.3.1",
+    "gulp-cssnano": "^2.0.0",
     "gulp-factor-bundle": "^0.2.1",
     "gulp-file": "^0.2.0",
-    "gulp-load-plugins": "^0.8.0",
-    "gulp-minify-css": "^1.1.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.0",
