--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^3.0.0",
     "gulp-rev-outdated": "0.0.8",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.3.5",
     "http-proxy": "^1",
