--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "mq-remove": "0.0.7",
     "partialify": "^3.1.3",
     "respawn": "^2.0.0",
+    "rev-hash": "^1.0.0",
     "rimraf": "^2.5.0",
     "semver": "^4.3.6",
     "sockjs": "^0.3",
