--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "del": "^1.1.1",
     "dep-graph": "^1",
     "ds-rewriter": "^1",
-    "es3ify-safe": "^0.1.3",
+    "es3ify": "^0.2.1",
     "event-stream": "^3.2.1",
     "eventemitter3": "^1",
     "express": "^4",
