--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "dependencies": {
     "anymatch": "^1",
+    "babel-core": "~6.4",
+    "babel-generator": "~6.4",
     "babel-preset-dysonshell": "^1.0.1",
     "babelify": "^7",
     "bluebird": "^2",
